@@ -1,9 +1,9 @@
 dnl
-dnl $Id: config.m4,v 1.7.4.2 2003/10/01 02:53:58 sniper Exp $
+dnl $Id: config.m4,v 1.7.4.3 2003/11/19 04:44:24 sniper Exp $
 dnl
 
 PHP_ARG_WITH(gmp, for GNU MP support,
-[  --with-gmp              Include GNU MP support])
+[  --with-gmp[=DIR]        Include GNU MP support])
 
 if test "$PHP_GMP" != "no"; then
 
@@ -14,6 +14,18 @@ if test "$PHP_GMP" != "no"; then
   if test -z "$GMP_DIR"; then
     AC_MSG_ERROR(Unable to locate gmp.h)
   fi
+ 
+  PHP_CHECK_LIBRARY(gmp, __gmp_randinit_lc_2exp_size,
+  [],[
+    PHP_CHECK_LIBRARY(gmp, gmp_randinit_lc_2exp_size,
+    [],[
+      AC_MSG_ERROR([GNU MP Library version 4.1.2 or greater required.])
+    ],[
+      -L$GMP_DIR/lib
+    ])
+  ],[
+    -L$GMP_DIR/lib
+  ])
 
   PHP_ADD_LIBRARY_WITH_PATH(gmp, $GMP_DIR/lib, GMP_SHARED_LIBADD)
   PHP_ADD_INCLUDE($GMP_DIR/include)
